# chacha20_poly1305

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
include/: chacha20_poly1305.h
src/: chacha20.c  chacha20.h  chacha20_poly1305.c  poly1305.c  poly1305.h
test/: test_aead.c  test_chacha20.c  test_cross_validation.c  test_poly1305.c
